LF-5216 Fix horizontal scrolling behaviour on ImageUploadCapture preview

--- a/packages/webapp/src/components/ImageUploadCapture/styles.module.scss
+++ b/packages/webapp/src/components/ImageUploadCapture/styles.module.scss
@@ -32,8 +32,8 @@
 
 /* when an image is selected */
 .bodyWithPreview {
-  gap: 8px;
-  justify-content: flex-start;
+  gap: 16px;
+  justify-content: stretch;
 }
 
 /* individual tile */
@@ -84,14 +84,13 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  flex: 1;
+  // width: 100%; // check with Loïc for preference
 }
 
 .actionBtn {
   display: flex;
   align-items: center;
   gap: 4px;
-  width: 100%;
   height: 48px;
   padding: 8px 12px;
   border-radius: 8px;
